cargo_check_workspace_fix.txt
cargo :     Checking cowork-gui v0.1.0 (D:\Workspace\toys\cowork-forge\crates\cowork-gui\src-tauri)
At line:1 char:64
+ ... ys\cowork-forge\crates\cowork-gui\src-tauri; cargo check 2>&1 | Out-F ...
+                                                  ~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (    Checking co...-gui\src-tauri):String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
warning: unused import: `Cursor`
 --> crates\cowork-gui\src-tauri\src\preview_server.rs:8:15
  |
8 | use std::io::{Cursor, Read};
  |               ^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `Method`
 --> crates\cowork-gui\src-tauri\src\preview_server.rs:9:52
  |
9 | use tiny_http::{Server, Response, Request, Header, Method, StatusCode};
  |                                                    ^^^^^^

warning: unused import: `std::collections::HashMap`
 --> crates\cowork-gui\src-tauri\src\project_manager.rs:7:5
  |
7 | use std::collections::HashMap;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `gui_types::*`
  --> crates\cowork-gui\src-tauri\src\lib.rs:21:5
   |
21 | use gui_types::*;
   |     ^^^^^^^^^^^^

warning: unused import: `cowork_core::agents::iterative_assistant::*`
   --> crates\cowork-gui\src-tauri\src\lib.rs:420:9
    |
420 |     use cowork_core::agents::iterative_assistant::*;
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `cowork_core::llm::ModelConfig`
   --> crates\cowork-gui\src-tauri\src\lib.rs:421:9
    |
421 |     use cowork_core::llm::ModelConfig;
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::path::Path`
    --> crates\cowork-gui\src-tauri\src\lib.rs:1482:9
     |
1482 |     use std::path::Path;
     |         ^^^^^^^^^^^^^^^

warning: unused import: `cowork_core::llm::ModelConfig`
    --> crates\cowork-gui\src-tauri\src\lib.rs:1483:5
     |
1483 | use cowork_core::llm::ModelConfig;
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: variable does not need to be mutable
   --> crates\cowork-gui\src-tauri\src\project_runner.rs:176:13
    |
176 |         let mut process = {
    |             ----^^^^^^^
    |             |
    |             help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

error[E0308]: mismatched types
   --> crates\cowork-gui\src-tauri\src\lib.rs:323:28
    |
323 |         init_project_index(project_name)
    |         ------------------ ^^^^^^^^^^^^ expected `String`, found `&str`
    |         |
    |         arguments to this function are incorrect
    |
note: function defined here
   --> D:\Workspace\toys\cowork-forge\crates\cowork-core\src\storage\mod.rs:88:8
    |
 88 | pub fn init_project_index(project_name: String) -> Result<ProjectIndex> {
    |        ^^^^^^^^^^^^^^^^^^
help: try using a conversion method
    |
323 |         init_project_index(project_name.to_string())
    |                                        ++++++++++++

error[E0382]: use of moved value: `workspace`
   --> crates\cowork-gui\src-tauri\src\lib.rs:673:10
    |
658 |     let workspace = state.workspace_path.lock()
    |         --------- move occurs because `workspace` has type `std::sync::MutexGuard<'_, std::option::Option<std::string::String>>`, which does no
t implement the `Copy` trait
...
664 |         drop(workspace);
    |              --------- value moved here
...
673 |     drop(workspace);
    |          ^^^^^^^^^ value used here after move

warning: unused import: `Read`
 --> crates\cowork-gui\src-tauri\src\preview_server.rs:8:23
  |
8 | use std::io::{Cursor, Read};
  |                       ^^^^

warning: unused variable: `session_id`
  --> crates\cowork-gui\src-tauri\src\gui_commands.rs:87:5
   |
87 |     session_id: String,
   |     ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_session_id`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `session_id`
   --> crates\cowork-gui\src-tauri\src\gui_commands.rs:151:5
    |
151 |     session_id: String,
    |     ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_session_id`

warning: unused variable: `session_id`
   --> crates\cowork-gui\src-tauri\src\project_runner.rs:202:41
    |
202 |     pub async fn execute_command(&self, session_id: String, command: String) -> Result<String, String> {
    |                                         ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_session_id`

warning: variable does not need to be mutable
   --> crates\cowork-gui\src-tauri\src\project_manager.rs:404:19
    |
404 |         if let Ok(mut entries) = fs::read_dir(&workspace.join(".cowork").join("sessions")) {
    |                   ----^^^^^^^
    |                   |
    |                   help: remove this `mut`

warning: unused variable: `window`
   --> crates\cowork-gui\src-tauri\src\lib.rs:417:5
    |
417 |     window: Window,
    |     ^^^^^^ help: if this is intentional, prefix it with an underscore: `_window`

warning: unused variable: `session_id_clone`
   --> crates\cowork-gui\src-tauri\src\lib.rs:552:9
    |
552 |     let session_id_clone = new_session_id.clone();
    |         ^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_session_id_clone`

warning: unused variable: `state`
   --> crates\cowork-gui\src-tauri\src\lib.rs:868:5
    |
868 |     state: State<'_, AppState>,
    |     ^^^^^ help: if this is intentional, prefix it with an underscore: `_state`

Some errors have detailed explanations: E0308, E0382.
For more information about an error, try `rustc --explain E0308`.
warning: `cowork-gui` (lib) generated 17 warnings
error: could not compile `cowork-gui` (lib) due to 2 previous errors; 17 warnings emitted
